--- a/formulario1.html
+++ b/formulario1.html
@@ -23,7 +23,7 @@
         <label>Estado civil:</label>
         <input type="radio" id="soltero" name="estado_civil" value="soltero" required>
         <label class="radio" for="soltero">Soltero</label>
-
+#prueba1
         <input type="radio" id="casado" name="estado_civil" value="casado" required>
         <label class="radio" for="casado">Casado</label>
 
